Fix alignment of offer titles

--- a/src/scss/components/_offer-page.scss
+++ b/src/scss/components/_offer-page.scss
@@ -9,6 +9,9 @@
 
 .offer__title {
   @include section__title;
+}
+
+.offer__title--post {
   align-items: flex-start;
 }
 
